--- a/src/sections/_0_Herro/top_bg.scss
+++ b/src/sections/_0_Herro/top_bg.scss
@@ -1,4 +1,4 @@
-@use '../styles/abstracts/index' as *;
+@use '../../styles/abstracts/index.scss' as *;
 
 .top_bg {
     // градієнт/колір першими — вони накладаються на картинку
