--- a/src/sections/_5_Pricing/Pricing.scss
+++ b/src/sections/_5_Pricing/Pricing.scss
@@ -2,7 +2,7 @@
 
 .pricing {
   background-color: $color_primary_black_100;
-  padding: 24px 0;
+  padding: 24px 0 0 0;
   color: $color_text_light;
 
   &__head{
