--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@
     --color-primary-dark: #764ba2;
     --color-secondary: #f59e0b;
     --color-accent: #fbbf24;
+    --color-primary-button-blue: rgba(2, 84, 217, 1);
 
     --color-text: #1f2937;
     --color-text-light: #6b7280;
@@ -123,7 +124,7 @@ a {
 }
 
 a:hover {
-    color: var(--color-primary-dark);
+    background-color: var(--color-primary-button-blue);
 }
 
 /* Utility Classes */
