--- a/src/components/ui/SectionTitle/SectionTitle.scss
+++ b/src/components/ui/SectionTitle/SectionTitle.scss
@@ -1,6 +1,6 @@
 @use '../../../styles/abstracts/index' as *;
 
-.section__title{
+.section__title {
     font-family: 'Roboto Mono';
     font-style: normal;
     font-weight: 700;
@@ -10,10 +10,19 @@
     align-items: center;
     text-transform: uppercase;
 
-    &.white{
-      color: $color_secondary_white_80;
+    @media (max-width: $breakpoint_md) {
+        font-size: 20px;
     }
-    &.dark{
+
+    @media (max-width: $breakpoint_sm) {
+        font-size: 18px;
+    }
+
+    &.white {
+        color: $color_secondary_white_80;
+    }
+
+    &.dark {
         color: $color_secondary_black_80;
     }
 }
