--- a/src/components/ui/Container/Container.css
+++ b/src/components/ui/Container/Container.css
@@ -6,9 +6,37 @@
     padding-right: var(--container-padding, 2rem);
 }
 
+@media (max-width: 1024px) {
+    .container {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        padding-left: var(--container-padding-mobile, 1rem);
+        padding-right: var(--container-padding-mobile, 1rem);
+    }
+}
+
+@media (max-width: 480px) {
+    .container {
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
+    }
+}
+
 .container--fluid {
     width: 100%;
     max-width: 100%;
     padding-left: var(--container-padding-mobile, 1rem);
     padding-right: var(--container-padding-mobile, 1rem);
+}
+
+@media (max-width: 480px) {
+    .container--fluid {
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
+    }
 }
