--- a/src/components/ui/ImageUpload/ImageUpload.scss
+++ b/src/components/ui/ImageUpload/ImageUpload.scss
@@ -13,6 +13,15 @@
     overflow: hidden;
     border: 2px solid rgba(255, 255, 255, 0.1);
 
+    @media (max-width: $breakpoint_md) {
+      max-width: 350px;
+    }
+
+    @media (max-width: $breakpoint_sm) {
+      max-width: 100%;
+      margin-bottom: $spacing_sm;
+    }
+
     img {
       width: 100%;
       height: auto;
@@ -46,6 +55,12 @@
     &:disabled {
       opacity: 0.5;
       cursor: not-allowed;
+    }
+
+    @media (max-width: $breakpoint_sm) {
+      width: 28px;
+      height: 28px;
+      font-size: 20px;
     }
   }
 
@@ -82,6 +97,13 @@
     &:active {
       transform: translateY(0);
     }
+
+    @media (max-width: $breakpoint_sm) {
+      width: 100%;
+      text-align: center;
+      padding: $spacing_xs $spacing_sm;
+      font-size: $font_size_xs;
+    }
   }
 
   &__error {
@@ -91,6 +113,11 @@
     border-radius: $radius_sm;
     color: #ff6b6b;
     font-size: $font_size_sm;
+
+    @media (max-width: $breakpoint_sm) {
+      padding: $spacing_xs;
+      font-size: $font_size_xs;
+    }
   }
 
   &__loader {
@@ -113,6 +140,12 @@
     border-top-color: white;
     border-radius: 50%;
     animation: spin 0.8s linear infinite;
+
+    @media (max-width: $breakpoint_sm) {
+      width: 32px;
+      height: 32px;
+      border-width: 3px;
+    }
   }
 }
 
