--- a/src/sections/_4_Process/Process.scss
+++ b/src/sections/_4_Process/Process.scss
@@ -1,14 +1,29 @@
 @use '../../styles/abstracts/index.scss' as *;
 
-.process{
+.process {
     padding: 120px 0;
     background: $color_primary_light_cyan;
     position: relative;
 
-    &__header {
-        margin-bottom: 60px;
+    @media (max-width: $breakpoint_lg) {
+        padding: 80px 0;
     }
 
+    @media (max-width: $breakpoint_md) {
+        padding: 60px 0;
+    }
+
+    &__header {
+        margin-bottom: 60px;
+
+        @media (max-width: $breakpoint_md) {
+            margin-bottom: 40px;
+        }
+
+        @media (max-width: $breakpoint_sm) {
+            margin-bottom: 30px;
+        }
+    }
 
     &__list {
         display: flex;
@@ -28,11 +43,58 @@
             border-top: 1px solid $color_secondary_black_80;
         }
 
+        @media (max-width: $breakpoint_lg) {
+            gap: 80px;
+            padding: 35px 0;
+        }
+
         @media (max-width: 968px) {
             grid-template-columns: 1fr;
             gap: 20px;
             padding: 30px 0;
         }
+
+        @media (max-width: $breakpoint_sm) {
+            gap: 16px;
+            padding: 24px 0;
+        }
     }
 
+    &__item-title {
+        font-size: 32px;
+        font-weight: 500;
+        color: $color_primary_black_100;
+        margin: 0;
+        line-height: 1.2;
+
+        @media (max-width: $breakpoint_lg) {
+            font-size: 28px;
+        }
+
+        @media (max-width: 968px) {
+            font-size: 24px;
+        }
+
+        @media (max-width: $breakpoint_sm) {
+            font-size: 20px;
+        }
+    }
+
+    &__item-description {
+        font-size: 16px;
+        line-height: 1.7;
+        color: $color_secondary_black_80;
+        margin: 0;
+        max-width: 500px;
+
+        @media (max-width: 968px) {
+            font-size: 15px;
+            max-width: 100%;
+        }
+
+        @media (max-width: $breakpoint_sm) {
+            font-size: 14px;
+            line-height: 1.6;
+        }
+    }
 }
