add load animation

--- a/src/sections/_0_Herro/Hero.scss
+++ b/src/sections/_0_Herro/Hero.scss
@@ -148,7 +148,7 @@
             transform: translateX(-50%);
             width: 366px;
             height: 12px;
-            background-image: url('../assets/images/vectore.png');
+            background-image: url('/src/assets/images/vectore.png');
             background-repeat: no-repeat;
             background-size: contain;
             background-position: center;
